--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 body{
 
     background-color: #404a65;
-    color: white;
+    color: #ECEDF0;
     font-family: "Kanit", sans-serif;
     text-align: center;
     padding: 2rem;
@@ -25,7 +25,7 @@ h1{
     font-family: "Kanit", sans-serif;
     font-weight: 600;
     font-size: 1.2rem;
-    background-color: #23649b;
+    background-color: #1F6FB0;
     color: white;
     box-shadow: 0px 4x 0px 0px #23649b;
 }
